--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="./style.css"type="text/css">
+  </head>
     <title>About Me</title>
   </head>
   </heard>
