--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <header>
     <nav>
       <ul>
+        <a href="./onlinere.pdf" target="_blanck"><li>My Resume</li></a>
         <a href="./index.html"><li>Home</li></a>
         <a href="./aboutme.html"><li>About Me</li>/a>
           </ul>
