--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,7 @@
   </heard>
 <nav>
   <ul>
+    <a href="./onlinere.pdf" target="_blanck"><li>My Resume</li></a>
     <a href="./index.html"><li>Hoem</li></a>
     <a href="./aboutme.thml"><li>About Me</li></a>
   </ul>
