--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <header>
     <nav>
       <ul>
-        <a href="./onlinere.pdf" target="_blanck"><li>My Resume</li></a>
+        <a href="./onlineresume.pdf" target="_blank"><li>My Resume</li></a>
         <a href="./index.html"><li>Home</li></a>
         <a href="./aboutme.html"><li>About Me</li>/a>
           </ul>
